--- a/server_stuff/Makefile
+++ b/server_stuff/Makefile
@@ -1,13 +1,7 @@
 CC=gcc
 CCLAGS=-std=c99
 
-all: network
-
-network: client server
-
-client: client.c payload.h
-	mkdir -p build
-	$(CC) $(CCFLAGS) client.c -o build/client
+all: server
 
 server: server.c payload.h
 	mkdir -p build
