Bluetooth: added server side code (#9)
* Bluetooth: added server side code

* bt: consistent indentation

--- a/server_stuff/network/Makefile
+++ b/server_stuff/network/Makefile
@@ -3,13 +3,16 @@ CFLAGS=-std=c99
 
 BUILDDIR=build
 
-all: $(BUILDDIR)/server
+all: $(BUILDDIR)/server $(BUILDDIR)/btserver
 
 $(BUILDDIR):
 	mkdir -p build
 
 $(BUILDDIR)/server: server.c payload.h | $(BUILDDIR)
 	$(CC) $(CFLAGS) server.c -o $(BUILDDIR)/server
+
+$(BUILDDIR)/btserver: bt-server.c payload.h | $(BUILDDIR)
+	$(CC) $(CFLAGS) bt-server.c -o $(BUILDDIR)/btserver
 
 clean:
 	rm -rf build
